@@ -89,7 +89,7 @@ layout.fruchterman.reingold <- function(graph, ..., dim=2,
   .Call(fn, graph,
         as.double(params$niter), as.double(params$maxdelta),
         as.double(params$area), as.double(params$coolexp),
-        as.double(params$repulserad), FALSE, params$weights, as.logical(verbose),
+        as.double(params$repulserad), params$weights, as.logical(verbose),
         PACKAGE="igraph")
 }
 
